--- a/package.json
+++ b/package.json
@@ -4,20 +4,11 @@
   "description": "Job application assistant platform",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "express-openid-connect": "^2.17.1",
-    "mongoose": "^8.0.3",
-    "@sendgrid/mail": "^8.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "helmet": "^7.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "18.x"
